/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */


syntax = "proto3";

option java_package = "org.apache.airavata.replicacatalog.catalog.service";

import "catalogapi/ReplicaCatalogAPI.proto";

service ReplicaCatalogAPIService {

  /*
   * Register a new replica to the Replica Catalog
   */
  rpc registerReplicaLocation(DataReplicaCreateRequest) returns (DataReplicaCreateResponse){}

  /*
   * Update existing replica details in the ReplicaCatalog
   */
  rpc updateReplicaLocation(DataReplicaUpdateRequest) returns (DataReplicaUpdateResponse){}

  /*
   * Retrieving existing replica details in the ReplicaCatalog
   */
  rpc getReplicaLocation(DataReplicaGetRequest) returns (DataReplicaGetResponse){}

  /*
   * Removing a replica in the ReplicaCatalog
   */
  rpc removeReplicaLocation(DataReplicaDeleteRequest) returns (DataReplicaDeleteResponse){}

  /*
   * Retrieving all the existing replica details for a selected product data in the ReplicaCatalog
   */
  rpc getAllReplicaLocation(AllDataReplicaGetRequest) returns (AllDataReplicaGetResponse){}

  /*
   * Remove all the existing replicas for a selected product data in the ReplicaCatalog
   */
  rpc removeAllReplicaLocation(AllDataReplicaDeleteRequest) returns (AllDataReplicaDeleteResponse){}


  /*
 * Register a new data product to the Replica Catalog
 */
  rpc registerDataProduct(DataProductCreateRequest) returns (DataProductCreateResponse){}

  /*
   * Update existing Data Product details in the ReplicaCatalog
   */
  rpc updateDataProduct(DataProductUpdateRequest) returns (DataProductUpdateResponse){}

  /*
   * Retrieving existing Data Product details in the ReplicaCatalog
   */
  rpc getDataProduct(DataProductGetRequest) returns (DataProductGetResponse){}

  /*
   * Removing a Data Product in the ReplicaCatalog
   */
  rpc removeDataProduct(DataProductDeleteRequest) returns (DataProductDeleteResponse){}


}
